# barlow

./: .gitignore  Cargo.toml
elm/src/: Main.elm
migrations/2019-04-01-063831_create_users/: up.sql
migrations/2019-05-13-092306_update_posts/: down.sql  up.sql
proptest-regressions/: authentication.txt  database.txt
src/: authentication.rs  database.rs  lib.rs  main.rs  models.rs  result.rs  routes.rs  schema.rs  test_utils.rs  tests.rs
static/: index.html
