[package]
name = "barlow_spa"
version = "0.1.0"
authors = ["snowbellows <aleyhalverson@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.6"
pretty_env_logger = "0.3.0"
serde = "1.0.88"
serde_derive = "1.0.88"
warp = "0.1.13"
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.9.0"
r2d2 = "0.8.3"
r2d2-diesel = "1.0.0"
chrono = "0.4.0"
scrypt = "0.2.0"
proptest = "0.9.3"